Tue Feb 26 18:58:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccelgroup.c (gtk_accelerator_set_default_mod_mask):
	OR in the three default modifiers to any value passed
	in by the caller, so that the caller won't break the
	the default bindings. (#70142, Jody Goldberg, though he
	wasn't in favor of this particular way of solving it.)

Tue Feb 26 18:47:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_add_mnemonic): Append
	mnemonics rather than prepending them so that the 
	order is typically forward rather than typically
	backward. (Partial fix for #52395)

Wed Feb 27 00:45:39 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkarrow.c, gtk/gtkmenuitem.c, gtk/gtkrange.c
	gtk/gtkspinbutton.c gtk/gtkstyle.c: Draw arrows better (without
	extra baseline)

Tue Feb 26 18:38:17 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_refetch): 
	Display any "g_unicode_isgraph()" char literally,
	not just latin1. (#65679)

Tue Feb 26 18:01:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_grab_focus): Don't
	focus insensitive widgets. (#68203)
	
	* gtk/gtkentry.c (gtk_entry_state_changed): Clear any
	current selection if we become insensitive. (#68203)

	* gtk/gtkentry.c (gtk_entry_grab_focus): Don't
	select the text if the entry isn't editable. (#67203)

	* gtk/gtkentry.c: Activate keybindings when not editable,
	but supress keybindings that change the text. (#65848, #68203)

	* gtk/gtkentry.c (gtk_entry_set_property): Reset the
	IM context for the entry when it is made not editable.

Tue Feb 26 17:04:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c (update_color): Emit ::color_changed
	every time we notify current_color. (Brute force 
	fix for #72470, Matthias Clasen). Some fixes to improve
	reentrancy.

Tue Feb 26 15:04:33 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_enter_text): use
	the cursor position _after_ deleting the text